# MP3Interface

./: Cargo.toml  Dockerfile  README.md  SPECS.md
compiler/: build.rs  compiler.cabal
compiler/prop2sql/: README.md  prop2sql.cabal
compiler/prop2sql/app/: Controller.hs  Main.hs
compiler/prop2sql/model/: Compiler.hs  Domain.hs  Parser.hs
compiler/prop2sql/src/: Compiler.hs  Domain.hs  Parser.hs
compiler/prop2sql/test/: Spec.hs  UnitTests.hs
compiler/src/: lib.rs
doc/: DESIGN.md  MINER.md  VIEW.md
domain/src/: album.rs  group.rs  group_member.rs  lib.rs  performer.rs  person.rs  song.rs
miner/: Cargo.toml
miner/src/: lib.rs
miner/tests/: integration_test.rs
mp3_player/: Cargo.toml
mp3_player/src/: main.rs  mp3_player.rs
mp3_player/src/mp3_player/: controller.rs  domain.rs  ui.rs
mp3_player/src/mp3_player/controller/: app_state.rs  mp3_player.rs  orchestrator.rs
mp3_player/src/mp3_player/ui/: gui.rs  tui.rs  view_api.rs
mp3_player/src/mp3_player/ui/tui/: mod.rs  tui.rs  tui_backend.rs  tui_renderer.rs
src/: controller.rs  data_miner.rs  main.rs  mp3_player.rs
src/controller/: app_state.rs  mp3_player.rs
src/data/: data_miner.rs  mod.rs  song_repo.rs
src/mp3_player/: data.rs  ui.rs
src/mp3_player/controller/: mp3_player.rs
src/mp3_player/data/: data_miner.rs  util_files.rs
src/mp3_player/domain/: mod.rs  song.rs
src/mp3_player/ui/: gui.rs  tui.rs
src/ui/: gui.rs  tui.rs  view_api.rs
