cabal-version:      3.0
name:               prop2sql

version:            0.1.0.0

synopsis: Compiler from propositional sentences to sql queries.

-- A longer description of the package.
-- description:

license:            GPL-3.0-only

license-file:       LICENSE

author:             Hector Valdes

maintainer:         hdvvaldes@gmail.com

category:           Language
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable prop2sql
    import:           warnings
    main-is:          Main.hs
    other-modules:    Controller
    build-depends:    base ^>=4.18.3.0,
                      transformers >=0.6,
                      prop2sql-model,
                      text,
    hs-source-dirs:   app
    default-language: Haskell2010

library prop2sql-model
    import:           warnings
    exposed-modules:  Compiler, Domain, Parser
    build-depends:    base ^>=4.18.3.0,
                      text,
                      megaparsec >=9
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite prop2sql-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.18.3.0,
                      prop2sql-model,
                      text,
                      tasty,
                      tasty-hunit,
                      tasty-golden,
    default-language: Haskell2010
